improved search button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <form action="https://www.google.com/search" id="searchbar">
             <input type="text" name="q" placeholder="Type here" id="searchbox">
-            <input type="submit" value="Google Search">
+            <input type="submit" value="Google Search" id="searchbutton">
         </form>
     </body>
 </html>
