--- a/image.html
+++ b/image.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Image Search Form</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <form action="https://www.google.com/search" id="searchbar">
