--- a/image.html
+++ b/image.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div id="aligner">
+        <a href="https://roboticsprogrammer341.github.io/image.html"><img src="https://ssl.gstatic.com/gb/images/bar/al-icon.png" alt="image search" ></a>
+      <a href="https://roboticsprogrammer341.github.io/index.html"><img src="https://icon-library.com/images/google-search-magnifying-glass-icon/google-search-magnifying-glass-icon-5.jpg" alt="File:Magnifying glass icon.svg - Wikimedia Commons" height="24";
+              width="24";></a>
+      <a href="https://roboticsprogrammer341.github.io/advance.html"><img src="https://d1nhio0ox7pgb.cloudfront.net/_img/o_collection_png/green_dark_grey/24x24/plain/shape_circle.png" alt="advance search" height="24" width="24"></a>
+      </div>
     <form action="https://www.google.com/search" id="searchbar">
         <!-- Add the hidden input for image search -->
         <input type="hidden" name="tbm" value="isch">
@@ -13,7 +19,7 @@
         <input type="text" name="q" placeholder="Type here" id="searchbox">
         
         <!-- Your submit button -->
-        <input type="submit" name="btnl" value="Google Search" id="searchbutton"
+        <input type="submit" name="btnI" value="Google Search" id="searchbutton"
             data-ved="0ahUKEwjKzcjmi-aDAxWozjgGHRcxB-YQ19QECBU">
     </form>
 </body>
